--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.15.9",
+    "astro-decap-cms-oauth": "^0.4.1",
     "decap-cms-app": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
